--- a/css/styles.css
+++ b/css/styles.css
@@ -42,3 +42,149 @@
 .gallery__link:hover {
   cursor: zoom-in;
 }
+.button {
+  border: none;
+  color: #090808;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 600px;
+  height: 400px;
+  transition: all 0.5s;
+  cursor: pointer;
+  box-shadow: 0 9px #999;
+  border-radius: 4px;
+  background-size: cover;
+}
+body{
+   background-image: url(../img/gal5.webp);
+   background-size:  cover;
+}
+
+.main {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 200px 800px;
+  justify-content: center;
+  align-items: center;
+}
+
+.galerey {
+  background-image: url(../img/buch2.jpg);
+}
+
+.contacts {
+  background-image: url(../img/cont.jpg);
+}
+
+.children {
+  background-image: url(../img/child.jpg);
+}
+
+.document {
+  background-image: url(../img/doc.jpg);
+}
+
+.button:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(10px);
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+dialog {
+  background: rgba(255, 255, 255, 0.7);
+  width: 300px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+
+.popap {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  opacity: 0;
+  visibility: hidden;
+  overflow-y: auto;
+  overflow-x: hidden;
+  transition: all 0.8s ease 0s;
+}
+
+.popap:target {
+  opacity: 1;
+  visibility: visible;
+}
+
+.popap:target .popap_content {
+  transform: perspective(600px) translate(0px, 0) rotatex(0deg);
+  opacity: 1;
+
+}
+
+.popap_body {
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 30px, 10px;
+  transition: all 0.8s ease 0s;
+}
+
+.popap_content {
+  background-color: white;
+  color: black;
+  width: 800px;
+  height: 800px;
+  padding: 30px;
+  position: relative;
+  transition: all 0.8s ease 0s;
+  opacity: 0;
+  transform: perspective(600px) translate(0px, -100%) rotatex(45deg);
+}
+
+.popap_close {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.popap_title {
+  font-size: 40px;
+  margin: 0 0 1em 0;
+
+}
+
+.popap_text {}
+
+a {
+  text-decoration: none;
+  color: black;
+}
